--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 #+language: en
 
 - [[#introduction][Introduction]]
-
+- [[#setup][Setup]]
 - [[#features][Features]]
   - [[#follow-links][Follow Links]]
     - [[#using-org-mode-and-org-links][Using Org-Mode and Org-Links]]
@@ -73,6 +73,38 @@ For the best experience completing filenames and links, it is *highly*
 recommended to use the =orderless= completion style, from [[https://github.com/oantolin/orderless][the package of the
 same name]]. Another high recommendation is [[https://github.com/minad/vertico][Vertico]], for completion in the
 minibuffer.
+
+
+* Setup
+
+Add =zk.el= to your loadpath and include =(require 'zk)= in your
+init.el file.
+
+At a minimum, you must set the variables =zk-directory= and
+=zk-file-extension=:
+
+#+begin_src emacs-lisp
+(setq zk-directory "~/path/to/your/zk-directory")
+(setq zk-file-extension "md") ;; any plaintext file extension, eg, "org" or "txt"
+#+end_src
+
+Or with =use-package=:
+
+#+begin_src emacs-lisp
+(use-package zk
+  :custom
+  (zk-directory "~/path/to/zk-directory")
+  (zk-file-extension "md"))
+#+end_src
+
+Once =zk= is loaded, call =M-x zk-new-note= to create a note or =M-x zk-find-file= to
+open an existing note.
+
+*** Additional Setup:
+
+- To enable automatic link-creation when opening a zk-file, include the function =(zk-setup-auto-link-buttons)= in your init config. This ensures that =zk-enable-link-buttons= is set to =t= and adds =zk-make-link-buttons= to Emacs's =find-file-hook=.
+
+- To enable Embark integration, include the function =(zk-setup-embark)= in your init config.
 
 * Features
 
@@ -291,8 +323,11 @@ the following variables accordingly:
 
 ** Embark Integration
 
-This package includes out-of-the-box support for [[https://github.com/oantolin/embark][Embark]], both on
-links-at-point and in the minibuffer.
+This package includes support for [[https://github.com/oantolin/embark][Embark]], both on links-at-point and in the
+minibuffer.
+
+To enable Embark integration, evaluate the function =zk-setup-embark=. Include this
+function in your config file to setup Embark integration on startup.
 
 When Embark is loaded, calling =embark-act= on a zk-id at point makes
 available the functions in the keymap =zk-id-map=. This is a convenient way
